# Plasmo

./: .clauderc  .cursorrules  .gitignore  .sesskey  .skhdrc_simplified  .yabairc_no_sa  AGENTS.md  AGENT_FRAMEWORK_EXERCISE_PLAN.md  AUTO_START_README.md  BOLT_INTEGRATION_GUIDE.md  CHROME_DEBUG_README.md  CHROME_DEBUG_SOLUTION.md  CLAUDE.md  CLAUDE_DESKTOP_README.md  COMPLETE_CURSOR_RULES.md  CURRENT_STATUS.md  CURSOR_FIX_INSTRUCTIONS.md  DATABASE_API.md  LICENSE  LINUX_SETUP_README.md  MCP_FILES_AUDIT_AND_CLEANUP.md  MCP_README.md  MCP_TESTING_CHECKLIST.md  MCP_TESTING_README.md  MIGRATION_STATUS.md  MONOREPO.md  MULTI_LLM_ORCHESTRATION_GUIDE.md  PYTHON_MIGRATION_README.md  README-firebase-automation.md  README.md  RoundTable.tsx  SERVICE_INTEGRATION_GUIDE.md  SERVICE_ORCHESTRATION_README.md  SETUP_COMPLETE.md  SIDEKICK_AUDIT_REPORT.md  START_ALL_README.md  TDD_COMPLETION_SUMMARY.md  TDD_IMPLEMENTATION_PLAN.md  auto_click_automation.py  auto_click_simple.py  (+128 more)
.claude/: CLAUDE.md  settings.json
agents/: README.md  Thule--Tools Agent.mdc  active_agents.json  agent_spawner.py  founder_agent.md  mw_personal_assistant_agent.md  project_creation_template.md  recruiter_agent.md  spawn_agent.py
ai-chats/: cursor_add_chrome_debug_protocol_to_mcp.md  cursor_automate_acces_to_claude_ai.md  cursor_automate_chat_export_for_project.md  cursor_change_logging_behavior_for_page.md  cursor_check_open_tabs_in_chrome_with_p.md  cursor_code_review_and_improvement_sugg.md  cursor_copy_messages_from_discord_to_go.md  cursor_creating_a_socketio_extension_fo.md  (+11 more)
capture_ui/: Package.swift  (+4 more)
(+138 files in other folders)
